# beholder-tau-ceti

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  MILESTONES.md  README.md  ZENODO_SETUP.md  paper.tex  pyproject.toml
data/processed/: 17_posterior_width_comparison.csv  19_k3_k4_validated.csv  23_radvel_validation.csv
scripts/: run_17_dynesty_validation.py  run_19_k3_validated.py  run_23_radvel_validation.py
src/beholder/: __init__.py  target.py
src/beholder/rv/: __init__.py  activity.py  bayes.py  dace.py  keplerian.py  periodogram.py
