[project]
name = "beholder-tau-ceti"
version = "1.0.0"
description = "Reproducibility kit for τ Ceti RV re-analysis (RNAAS 2026)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Vira Filatova" },
    { name = "Taras Filatov", email = "taras@dappros.com" },
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "astropy>=6.0",
    "celerite2>=0.3",
    "emcee>=3.1",
    "dynesty>=2.1",
    "radvel>=1.4.9",
    "corner>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beholder"]
